--- a/style1.css
+++ b/style1.css
@@ -55,6 +55,15 @@ body
     clear: both;
 }
 
+.input-field input[type="email"]
+{
+    height: 40px;
+    background-color: rgb(228, 228, 228);
+    border: 0;
+    padding: 15px;
+    clear: both;
+}
+
 .input-field input[type="checkbox"]
 {
     margin-top: 15px;
